fixed some alignment issue

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ button{
 
 }
 .delete-button{
-    background-color: rgb(211, 0, 0);
+    background-color: rgba(209, 3, 3, 0.925);
     
 }
 
